Résolution des bugs : 0002583 - 0002598 - 0002578 - 0002590 - 0002571 - 0002587 - 0002585 - 0002582 - 0002581 - 0002584 - 0002575 - 0002574

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
@@ -42,7 +42,7 @@
             $("#fulltable").dataTable({
                 oLanguage: {
                     sSearch: "Rechercher&nbsp;",
-                    sInfo: "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
+                    sInfo: "Classeurs _START_ &agrave; _END_ sur _TOTAL_",
                     sInfoEmpty: "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
                     sInfoFiltered: "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
                     sZeroRecords: "Aucun enregistrement &agrave; afficher",
@@ -75,9 +75,9 @@
                         sClass: "center",
                         bSortable: false,
                         "mRender": function ( data, type, full ) {
-                            var retour = '<a class="col-sm-6" href="' + Routing.generate('classeur_edit', {id: data}) + '"><span class="glyphicon glyphicon-pencil"></span></a>';
+                            var retour = '<a class="col-sm-6" href="' + Routing.generate('classeur_edit', {id: data}) + '"><span class="glyphicon glyphicon-pencil" title="Editer le document"></span></a>';
                             if (full[8] == 2) {
-                                retour += '<a class="col-sm-6"href="' + Routing.generate('visu', {id: full[7]}) + '"><span class="glyphicon glyphicon-eye-open"></span></a>';
+                                retour += '<a class="col-sm-6"href="' + Routing.generate('visu', {id: full[7]}) + '"><span class="glyphicon glyphicon-eye-open" title="Voir le document"></span></a>';
                             }
                             return retour;
                         }
