--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -51,7 +51,7 @@
             <div class="btndemerde">
                 <a href="{{ path('classeur') }}" class="btn btn-primary navbar-btn">
                     <span class="glyphicon glyphicon-share-alt"></span>
-                    Retour à la liste des classeur
+                    Retour à la liste des classeurs
                 </a>
             </div>
         </form>
