--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -39,7 +39,7 @@
     <br>
 
     <div id='avancement' name='avancement'> Système de signature en cours de chargement..<br/>Ceci peut prendre
-        plusieurs minutes. Merci d'accepter toutes les demandes qui vous seront formulés par des boites de dialogues.
+        plusieurs minutes. Merci d'accepter toutes les demandes qui vous seront formulées par des boites de dialogues.
     </div>
     <br>
 
