--- a/src/Sesile/MainBundle/Resources/views/Admin/indexMailing.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Admin/indexMailing.html.twig
@@ -14,7 +14,7 @@
             <div class="col-md-9">
                 <div class="alert-email alert-danger">
                     <span class="glyphicon glyphicon-exclamation-sign"></span>
-                    Ce formulaire envoie un email à <strong>tous</strong> les utilisateurs de l'instance
+                    Ce formulaire envoi un email à <strong>tous</strong> les utilisateurs de l'instance
                 </div>
             </div>
         </div>
