--- a/src/Sesile/MainBundle/Resources/views/Documentation/editPatch.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Documentation/editPatch.html.twig
@@ -4,7 +4,7 @@
     <div class="bloc_page">
         <div class="titre_page">
             <span class="glyphicon glyphicon-book"></span>
-            &nbsp;&nbsp;&nbsp;Modifier la documentation Patch
+            &nbsp;&nbsp;&nbsp;Modifier la documentation des évolutions
         </div>
         <form action="{{ path('modifyPatch',{'id':patch.id}) }}" method="POST" class="form-horizontal"
               enctype="multipart/form-data" id="form">
