--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_retracter.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_retracter.html.twig
@@ -15,7 +15,7 @@
         $(".dtables").dataTable({
 		"oLanguage": {
 		    "sSearch": "Rechercher&nbsp;:",
-		    "sInfo": "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
+		    "sInfo": "Classeurs _START_ &agrave; _END_ sur _TOTAL_",
 		    "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
 		    "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
 		    "sZeroRecords": "Aucun classeur r&eacute;tractable &agrave; afficher",
@@ -30,7 +30,7 @@
         "order": [[ 1, "desc" ]],
 		"iDisplayLength": 15,
 		"aLengthMenu": [15, 30, 50, 100],
-		"sDom": 'lft<"footer_datatables"p>',
+		"sDom": 'lft<"footer_datatables"ip>',
 		"aoColumnDefs": [
             { "aTargets": [ 1,2,3,4 ], sClass: "center" },
             { "bSortable": false, "aTargets": [ 5 ], sClass: "center" },
