--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/legende.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/legende.html.twig
@@ -6,50 +6,50 @@
 
 	<span class="legendeitem">
     		<span class="glyphicon statut_1"></span>
-        	<span class="texte_legende tl1">&nbsp;Classeur en cours&nbsp;&nbsp;&nbsp;</span>
+        	<span class="texte_legende tl1">Classeur en cours</span>
 	</span>
 
-	 <span class="pipe">|&nbsp;&nbsp;&nbsp;</span>
+	 <span class="pipe">|</span>
 
     	<span class="legendeitem">
 	    <span class="glyphicon statut_0"></span>
-	    <span class="texte_legende tl0">&nbsp;Classeur refusé&nbsp;&nbsp;&nbsp;</span>
+	    <span class="texte_legende tl0">Classeur refusé</span>
 	</span>
 
-	<span class="pipe">|&nbsp;&nbsp;&nbsp;</span>
+	<span class="pipe">|</span>
 
 	<span class="legendeitem">
         	<span class="glyphicon statut_2"></span>
-        	<span class="texte_legende tl2">&nbsp;Classeur finalisé&nbsp;&nbsp;&nbsp;</span>
+        	<span class="texte_legende tl2">Classeur finalisé</span>
 	</span>
 
-	 <span class="pipe">|&nbsp;&nbsp;&nbsp;</span>
+	 <span class="pipe">|</span>
 
     	<span class="legendeitem">
 	        <span class="glyphicon statut_3"></span>
-	        <span class="texte_legende tl3">&nbsp;Classeur retiré&nbsp;&nbsp;&nbsp;</span>
+	        <span class="texte_legende tl3">Classeur retiré</span>
 	 </span>
 
 
-	<span class="pipe">|&nbsp;&nbsp;&nbsp;</span>
+	<span class="pipe">|</span>
 
     	<span class="legendeitem">
 	        <span class="glyphicon statut_4"></span>
-	        <span class="texte_legende tl4">&nbsp;Classeur retracté&nbsp;&nbsp;&nbsp;</span>
+	        <span class="texte_legende tl4">Classeur rétracté</span>
 	    </span>
 
-	    <span class="pipe">|&nbsp;&nbsp;&nbsp;</span>
+	    <span class="pipe">|</span>
 
     	<span class="legendeitem">
 		<span class="glyphicon glyphicon-export delegdo"></span>
-		<span class="texte_legende tl3 delegdo">&nbsp;Délégations envoyées&nbsp;&nbsp;&nbsp;</span>
+		<span class="texte_legende tl3 delegdo">Délégations envoyées</span>
 	</span>
 
-		<span class="pipe">|&nbsp;&nbsp;&nbsp;</span>
+		<span class="pipe">|</span>
 
 	<span class="legendeitem">
     		<span class="glyphicon glyphicon-import delegre"></span>
-    		<span class="texte_legende tl4 delegre">&nbsp;Délégations reçues</span>
+    		<span class="texte_legende tl4 delegre">Délégations reçues</span>
 	</span>
     <div class="clear"></div>
 </div>
