--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_retracter.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_retracter.html.twig
@@ -22,7 +22,7 @@
                 <a href="{{ path('classeur_edit', {id: classeur.id}) }}" class="link-datatable"><span class="glyphicon statut_{{ classeur.status }}"></span></a>
             </td>
             <td>
-                <a class="col-sm-6" href="{{ path('classeur_edit', {id: classeur.id}) }}"><span class="glyphicon glyphicon-pencil"></span></a>
+                <a class="col-sm-6" href="{{ path('classeur_edit', {id: classeur.id}) }}"><span class="glyphicon glyphicon-pencil" title="Editer le document"></span></a>
             </td>
         </tr>
     {% endfor %}
