--- a/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
@@ -62,7 +62,7 @@
         $(".dtables").dataTable({
             "oLanguage": {
                 "sSearch": "Rechercher&nbsp;:",
-                "sInfo": "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
+                "sInfo": "Type classeurs _START_ &agrave; _END_ sur _TOTAL_",
                 "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
                 "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
                 "sLengthMenu": "Afficher _MENU_ types de classeur par page",
@@ -70,6 +70,7 @@
                     "sFirst": "",
                     "sPrevious": "",
                     "sNext": "",
+                    "sLast": "",
                     "sZeroRecords": "Aucun type &agrave; afficher",
                     "sEmptyTable": "Aucun type &agrave; afficher"
                 }
@@ -77,7 +78,7 @@
             order: [[ 0, "asc" ]],
             "iDisplayLength": 15,
             "aLengthMenu": [15, 30, 50, 100],
-            "sDom": 'lft<"footer_datatables"p>',
+            "sDom": 'lft<"footer_datatables"ip>',
             "aoColumnDefs": [
                 { "aTargets": [ 1 ], sClass: "center" },
                 { "aTargets": [ 2 ], sClass: "center" },
