--- a/src/Sesile/DelegationsBundle/Resources/views/Default/liste.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/liste.html.twig
@@ -29,28 +29,28 @@
 <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
 <script type="text/javascript">
     $(".dtables").dataTable({
-	"oLanguage": {
-	    "sSearch": "Rechercher&nbsp;:",
-	    "sInfo": "Groupe  _START_ &agrave; _END_ sur _TOTAL_",
-	    "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
-	    "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
-	    "sLengthMenu": "Afficher _MENU_ délégations reçues par page",
-	    "oPaginate": {
-		"sFirst": "",
-		"sPrevious": "",
-		"sNext": "",
-		"sLast": "",
-	    },
-	    "sZeroRecords": "Aucune délégation reçue &agrave; afficher",
-	    "sEmptyTable": "Aucune délégation reçue &agrave; afficher"
-	},
-	"iDisplayLength": 15,
-	"aLengthMenu": [15, 30, 50, 100],
-	"sDom": 'lft<"footer_datatables"p>',
-	"aoColumnDefs": [
-	    { "bSortable": false, "aTargets": [  ] }
-	],
-	"sPaginationType": "full_numbers"
+        "oLanguage": {
+            "sSearch": "Rechercher&nbsp;:",
+            "sInfo": "Groupe  _START_ &agrave; _END_ sur _TOTAL_",
+            "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
+            "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
+            "sLengthMenu": "Afficher _MENU_ délégations reçues par page",
+            "oPaginate": {
+            "sFirst": "",
+            "sPrevious": "",
+            "sNext": "",
+            "sLast": ""
+            },
+            "sZeroRecords": "Aucune délégation reçue &agrave; afficher",
+            "sEmptyTable": "Aucune délégation reçue &agrave; afficher"
+        },
+        "iDisplayLength": 15,
+        "aLengthMenu": [15, 30, 50, 100],
+        "sDom": 'lft<"footer_datatables"ip>',
+        "aoColumnDefs": [
+            { "bSortable": false, "aTargets": [ 2 ] }
+        ],
+        "sPaginationType": "full_numbers"
     });
 
     $(".user-row").click(function () {
