--- a/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
@@ -46,7 +46,7 @@
 	    $(".table").dataTable({
 		"oLanguage": {
 		    "sSearch": "Rechercher&nbsp;:",
-		    "sInfo": "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
+		    "sInfo": "Collectivités _START_ &agrave; _END_ sur _TOTAL_",
 		    "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
 		    "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
 		    "sZeroRecords": "Aucun enregistrement &agrave; afficher",
@@ -60,7 +60,7 @@
 		},
 		"iDisplayLength": 15,
 		"aLengthMenu": [15, 30, 50, 100],
-		"sDom": 'lft<"footer_datatables"p>',
+		"sDom": 'lft<"footer_datatables"ip>',
 		"aoColumnDefs": [
 		    { "bSortable": false, "aTargets": [ 3 ] }
 		],
