--- a/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
@@ -2,72 +2,78 @@
 
 {% block content %}
     <div class="bloc_page">
-	<div class="titre_page">
-	    <span class="glyphicon glyphicon-cog"></span>
-	    &nbsp;&nbsp;&nbsp;Ajouter une nouvelle collectivité
-	</div>
-    {{ form_start(form) }}
-	<div class="row">
-	    <div class="col-md-3">{{ form_label(form.nom) }}</div>
-	    <div class="col-md-9">{{ form_widget(form.nom) }}</div>
-	</div>
-	<div class="row">
-	    <div class="col-md-3">{{ form_label(form.domain) }}</div>
-	    <div class="col-md-9">{{ form_widget(form.domain) }}</div>
-	</div>
-	<div class="row">
-	    <div class="col-md-3">{{ form_label(form.active) }}</div>
-	    <div class="col-md-9">{{ form_widget(form.active) }}</div>
-	</div>
-	<div class="row">
-	    <div class="col-md-3">{{ form_label(form.file) }}</div>
-	    <div class="col-md-9">{{ form_widget(form.file) }}</div>
-	</div>
-	<br>
+        <div class="titre_page">
+            <span class="glyphicon glyphicon-cog"></span>
+            &nbsp;&nbsp;&nbsp;Ajouter une nouvelle collectivité
+        </div>
+        {{ form_start(form) }}
+        <div class="row">
+            <div class="col-md-3">{{ form_label(form.nom) }}</div>
+            <div class="col-md-9">{{ form_widget(form.nom) }}</div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">{{ form_label(form.domain) }}</div>
+            <div class="col-md-9">{{ form_widget(form.domain) }}</div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">{{ form_label(form.active) }}</div>
+            <div class="col-md-9">{{ form_widget(form.active) }}</div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">{{ form_label(form.file) }}</div>
+            <div class="col-md-9">{{ form_widget(form.file) }}</div>
+        </div>
+        <br>
 
-	<div class="row">
-	    <div class="col-md-2"></div>
-	    <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
-	    <div class="col-md-2"></div>
-	</div>
-	{{ form_label(form.textmailnew) }}
-	{{ form_widget(form.textmailnew) }}
-	<br><br><br>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
+            <div class="col-md-2"></div>
+        </div>
+        {{ form_label(form.textmailnew) }}
+        {{ form_widget(form.textmailnew) }}
 
-	<div class="row">
-	    <div class="col-md-2"></div>
-	    <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
-	    <div class="col-md-2"></div>
-	</div>
-	{{ form_label(form.textmailrefuse) }}
-	{{ form_widget(form.textmailrefuse) }}
-	<br><br><br>
-	<div class="row">
-	    <div class="col-md-2"></div>
-	    <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
-	    <div class="col-md-2"></div>
-	</div>
-	{{ form_label(form.textmailwalid) }}
-	{{ form_widget(form.textmailwalid) }}
-	<br><br><br>
+        <br><br><br>
 
-	<div class="row">
-	    <div class="col-md-2"></div>
-	    <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
-	    <div class="col-md-2"></div>
-	</div>
-	{{ form_label(form.message) }}
-	{{ form_widget(form.message) }}
-	<br>
-	<br>
-	{{ form_widget(form.submit, {'attr': {'class': 'btn btn-success' }}) }}
-	<div class="retourbtn">
-	<a href="{{ path('index_collectivite') }}">
-	    <button type="button" class="btn btn-default navbar-btn">
-		Retour à la liste des collectivités
-	    </button>
-	</a>
-	</div>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
+            <div class="col-md-2"></div>
+        </div>
+        {{ form_label(form.textmailrefuse) }}
+        {{ form_widget(form.textmailrefuse) }}
+        <br><br><br>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
+            <div class="col-md-2"></div>
+        </div>
+        {{ form_label(form.textmailwalid) }}
+        {{ form_widget(form.textmailwalid) }}
+        <br><br><br>
+
+        <div class="row">
+            <div class="col-md-2"></div>
+            <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
+            <div class="col-md-2"></div>
+        </div>
+        {{ form_label(form.message) }}
+        {{ form_widget(form.message) }}
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-lg-3">
+                {{ form_widget(form.submit, {'attr': {'class': 'btn btn-success' }}) }}
+            </div>
+            <div class="col-lg-4">
+                <a href="{{ path('index_collectivite') }}" class="btn btn-primary navbar-btn">
+                    <span class="glyphicon glyphicon-share-alt"></span>
+                    Retour aux collectivités
+                </a>
+            </div>
+        </div>
+
+
     {{ form_end(form) }}
     </div>
 
