--- a/src/Sesile/MainBundle/Resources/views/Documentation/aide.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Documentation/aide.html.twig
@@ -35,7 +35,7 @@
             $("#liste_aides .dtables").dataTable({
                 "oLanguage": {
                     "sSearch": "Rechercher&nbsp;:",
-                    "sInfo": "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
+                    "sInfo": "Aide  _START_ &agrave; _END_ sur _TOTAL_",
                     "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
                     "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
                     "sLengthMenu": "Afficher _MENU_ utilisateurs par page",
@@ -43,14 +43,15 @@
                         "sFirst": "",
                         "sPrevious": "",
                         "sNext": "",
-                        "sZeroRecords": "Aucun utilisateur &agrave; afficher",
-                        "sEmptyTable": "Aucun utilisateur &agrave; afficher"
-                    }
+                        "sLast": ""
+                    },
+                    "sZeroRecords": "Aucune aide &agrave; afficher",
+                    "sEmptyTable": "Aucune aide &agrave; afficher"
                 },
                 order: [[0, "asc"], [1, "asc"]],
                 "iDisplayLength": 15,
                 "aLengthMenu": [15, 30, 50, 100],
-                "sDom": 'lft<"footer_datatables"p>',
+                "sDom": 'lft<"footer_datatables"ip>',
                 "sPaginationType": "full_numbers"
             });
         </script>
