--- a/src/Sesile/MainBundle/Resources/views/Documentation/newPatch.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Documentation/newPatch.html.twig
@@ -4,7 +4,7 @@
     <div class="bloc_page">
         <div class="titre_page">
             <span class="glyphicon glyphicon-book"></span>
-            &nbsp;&nbsp;&nbsp;Ajouter une documentation Patch
+            &nbsp;&nbsp;&nbsp;Ajouter une documentation d'évolution
         </div>
         <form action="{{ path('createPatch') }}" method="POST" class="form-horizontal" enctype="multipart/form-data"
               id="form">
