--- a/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
@@ -31,7 +31,6 @@
         <div class="label_form label-form-input">
             {{ form_label(form.Nom) }}
             {{ form_widget(form.Nom) }}
-
         </div>
 
         <br/>
@@ -72,24 +71,48 @@
         </div>
         <br/>
 
-        <div class="label_form parcou">
+        {#<div class="label_form parcou">
             {{ form_label(form.file) }}
             {{ form_widget(form.file) }}
+        </div>#}
+
+        <div class="label_form parcou">
+
+            <label class="lbl_avatar">Avatar</label>
+            <button type="button" class="btn_avatar">
+                Choisir un fichier
+            </button>
+            <span class="nom_avatar"></span>
+            {{ form_widget(form.file, { 'attr': {'class': 'parc_avatar'} }) }}
         </div>
+        <script type="text/javascript">
+            $(".btn_avatar").click(function () {
+                $(".parcou input[type='file']").trigger("click");
+            });
+
+            $(".parcou input[type='file']").change(function (e) {
+                var nom_fichier = e.target.files[0].name;
+                $('.nom_avatar').text(nom_fichier);
+            });
+        </script>
+
         <br/>
 
         <div class="label_form pickuser">
-            {{ form_label(form.roles) }}
+            {{ form_label(form.roles, 'Rôles') }}
             {{ form_widget(form.roles) }}
         </div>
 
         <br/>
         {% if is_granted('ROLE_SUPER_ADMIN') %}
             <div class="label_form pickuser">
-                {{ form_label(form.collectivite) }}
+                {{ form_label(form.collectivite, 'Collectivités') }}
                 {{ form_widget(form.collectivite) }}
             </div>
         {% endif %}
+
+        <br/>
+
         <div class="acti">
             <label for="{{ form.enabled.vars.id }}" class="cb-enable selected">
                 <span>Activé</span>
@@ -102,14 +125,49 @@
         <br/>
         <br/>
         <br/>
-        {{ form_widget(form.submit, {'attr': {'class': 'btn btn-success' }}) }}
-        {{ form_end(form) }}
+
+        <div class="row">
+            <div class="col-lg-2">Accès aux API : </div>
+            <div class="col-lg-2">{{ form_widget(form.apiactivated, {'attr': {'class': 'checkbox' }}) }}</div>
+        </div>
+
         <br/>
+
+        <div id="apitokensecret">
+            <div class="label_form label-form-input">
+                {{ form_label(form.apitoken) }}
+                {{ form_widget(form.apitoken) }}
+            </div>
+            <br/>
+            <div class="label_form label-form-input">
+                {{ form_label(form.apisecret) }}
+                {{ form_widget(form.apisecret) }}
+            </div>
+            <br/>
+        </div>
+
+        {#{{ form_widget(form.submit, {'attr': {'class': 'btn btn-success' }}) }}#}
+
+        <br/>
+
+        <div class="row">
+            <div class="col-lg-2">
+                {{ form_widget(form.submit, {'attr': {'class': 'btn btn-success' }}) }}
+                {{ form_end(form) }}
+            </div>
+            <div class="col-lg-3">
+                <a class="btn btn-primary navbar-btn" href="{{ path('liste_users') }}">
+                    <span class="glyphicon glyphicon-share-alt"></span>
+                    Retour aux utilisateurs
+                </a>
+            </div>
+
+        </div>
+
+        {{ form_end(form) }}
+
+
     </div>
-
-
-
-
 
 
 
