--- a/src/Sesile/UserBundle/Resources/views/SO/index.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/SO/index.html.twig
@@ -49,7 +49,7 @@
             $(".dtables").dataTable({
                 "oLanguage": {
                     "sSearch": "Rechercher&nbsp;:",
-                    "sInfo": "Groupe  _START_ &agrave; _END_ sur _TOTAL_",
+                    "sInfo": "Services organisationnels _START_ &agrave; _END_ sur _TOTAL_",
                     "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
                     "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
                     "sLengthMenu": "Afficher _MENU_ groupes par page",
@@ -64,7 +64,7 @@
                 },
                 "iDisplayLength": 15,
                 "aLengthMenu": [15, 30, 50, 100],
-                "sDom": 'lft<"footer_datatables"p>',
+                "sDom": 'lft<"footer_datatables"ip>',
                 "aoColumnDefs": [
                     { "aTargets": [ 1 ], sClass: "center" },
                     { "aTargets": [ 2 ], sClass: "center" },
