--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -178,6 +178,8 @@
                         COPYRIGHT &copy;2014
                         &nbsp; &ndash; &nbsp;
                         R&Eacute;ALIS&Eacute; PAR LE SICTIAM
+                        &nbsp; &ndash; &nbsp;
+                        SESILE version 3.0
                     </a>
                     </span>
             </div>
