--- a/src/Sesile/MainBundle/Resources/views/Documentation/patch.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Documentation/patch.html.twig
@@ -25,7 +25,7 @@
                         <td style="line-height: 30px;vertical-align: middle">{{ patch.date|date("d/m/Y") }}</td>
                         <td style="text-align: center"><a href="{{ asset('/uploads/docs/') ~ patch.path }}"
                                                           target="_blank"><img src="{{ asset("/images/imgpdf.png") }}"
-                                                                               height="30px"></a></td>
+                                                                               height="30px" title="Télécharger le fichier"></a></td>
                     </tr>
                 {% endfor %}
                 </tbody>
