--- a/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
@@ -32,10 +32,10 @@
                         </div>
                     </td>
                     <td class="boutons_action">
-                        <a href="{{ path("user_edit", {'id' : user.id }) }}">
+                        <a href="{{ path("user_edit", {'id' : user.id }) }}" title="Editer l'utilisateur">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a class="" href="{{ path("user_edit", {'id' : user.id }) }}">
+                        <a class="" href="{{ path("user_edit", {'id' : user.id }) }}" title="Supprimer l'utilisateur">
                             <span class="glyphicon glyphicon-trash"></span>
                         </a>
                     </td>
