Résolution des bugs : 0002607 - 0002603 - 0002604

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_retracter.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_retracter.html.twig
@@ -7,7 +7,7 @@
         <th>Intervenant</th>
         <th>Type de classeur</th>
         <th>Statut actuel</th>
-        <th>Action</th>
+        <th>Actions</th>
     </tr>
     </thead>
     <tbody>
