--- a/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
@@ -20,7 +20,7 @@
                 <th>Type de classeur</th>
                 <th>Date de création</th>
                 {#<th>Template</th>#}
-                <th>Action</th>
+                <th>Actions</th>
             </tr>
             </thead>
             <tbody>
