--- a/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
@@ -62,7 +62,8 @@
 		"aLengthMenu": [15, 30, 50, 100],
 		"sDom": 'lft<"footer_datatables"ip>',
 		"aoColumnDefs": [
-		    { "bSortable": false, "aTargets": [ 3 ] }
+		    { "aTargets": [ 2 ], sClass: "center" },
+		    { "bSortable": false, "aTargets": [ 3 ], sClass: "center" }
 		],
 		"sPaginationType": "full_numbers"
 	    });
