--- a/src/Sesile/MainBundle/Resources/views/Documentation/aide.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Documentation/aide.html.twig
@@ -13,7 +13,7 @@
                 <tr>
                     <th>Description</th>
                     <th>Date de parution</th>
-                    <th>Action</th>
+                    <th>Actions</th>
                 </tr>
                 </thead>
                 <tbody>
