--- a/src/Sesile/MainBundle/Resources/views/Documentation/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Documentation/index.html.twig
@@ -17,7 +17,7 @@
                     <th>Description</th>
                     <th>Version</th>
                     <th>Date de parution</th>
-                    <th>Action</th>
+                    <th>Actions</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -56,7 +56,7 @@
 
                     <th>Description</th>
                     <th>Date de parution</th>
-                    <th>Action</th>
+                    <th>Actions</th>
                 </tr>
                 </thead>
                 <tbody>
