--- a/src/Sesile/MainBundle/Resources/views/Documentation/patch.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Documentation/patch.html.twig
@@ -14,7 +14,7 @@
                     <th>Description</th>
                     <th>Version</th>
                     <th>Date de parution</th>
-                    <th>Action</th>
+                    <th>Actions</th>
                 </tr>
                 </thead>
                 <tbody>
