--- a/src/Sesile/UserBundle/Resources/views/SO/index.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/SO/index.html.twig
@@ -11,7 +11,7 @@
             <tr>
                 <th>Nom</th>
                 <th>Date de création</th>
-                <th>Action</th>
+                <th>Actions</th>
             </tr>
             </thead>
             <tbody>
