--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
@@ -7,7 +7,7 @@
         <th>Intervenant</th>
         <th>Type de classeur</th>
         <th>Statut actuel</th>
-        <th>Action</th>
+        <th>Actions</th>
         <th>document</th>
         <th>Type de classeur</th>
     </tr>
