--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_a_valider.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_a_valider.html.twig
@@ -8,7 +8,7 @@
         <th>Intervenant</th>
         <th>Type de classeur</th>
         <th>Statut actuel</th>
-        <th>Action</th>
+        <th>Actions</th>
         <th>document</th>
         <th>Type de classeur</th>
     </tr>
