--- a/src/Sesile/DocumentBundle/Resources/views/Document/visubord.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/visubord.html.twig
@@ -135,13 +135,14 @@
                     "sZeroRecords": "Aucun enregistrement &agrave; afficher",
                     "sLengthMenu": "Afficher _MENU_ pièces par page",
                     "oPaginate": {
-                        "sFirst": "Premiere",
-                        "sPrevious": "Pr&eacute;c&eacute;dente&nbsp;",
-                        "sNext": "&nbsp;Suivante",
-                        "sLast": "derni&egrave;re"
+                        "sFirst": "",
+                        "sPrevious": "",
+                        "sNext": "",
+                        "sLast": ""
                     }
                 },
-                "iDisplayLength": 100,
+                "sPaginationType": "full_numbers",
+                "iDisplayLength": 5,
                 "aLengthMenu": [5, 10, 20, 30, 50],
                 "sDom": 'lft<"footer_datatables"ip>'
             });
