Commit gestion groupes des utilisateurs (grand rectangle) + bug 2609 + bug 2580

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_retired.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_retired.html.twig
@@ -4,7 +4,7 @@
 <div class="bloc_page">
     <div class="titre_page">
         <span class="glyphicon glyphicon-list"></span>
-        &nbsp;&nbsp;&nbsp;Liste des classeurs retirés
+        &nbsp;&nbsp;&nbsp;Classeurs à supprimer
     </div>
 
     <table class="table tableau" id="dtables">
