--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -75,7 +75,7 @@
                         <li>
                             <a href="{{ path("liste_classeurs_retired") }}">
                                 <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
-                                Suppression de classeur
+                                Classeurs à supprimer
                             </a>
                         </li>
                     {% endif %}
