--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
@@ -9,10 +9,10 @@
         <th>Statut actuel</th>
         <th>Actions</th>
         <th>document</th>
-        <th>Type de classeur</th>
+        <th>Id Type de classeur</th>
     </tr>
     </thead>
-    <tbody>
+    {#<tbody>
     {% for classeur in classeurs %}
         <tr>
             <td>{{ classeur.nom }}</td>
@@ -30,7 +30,7 @@
             <td>{{ classeur.type.id }}</td>
         </tr>
     {% endfor %}
-    </tbody>
+    </tbody>#}
 </table>
     <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
     <script type="application/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
@@ -40,6 +40,11 @@
         $(document).ready(function () {
             $.fn.dataTable.moment( 'DD/MM/YYYY' );
             $("#fulltable").dataTable({
+                "processing": true,
+                "serverSide": true,
+                "ajax": {
+                    "url": Routing.generate('liste_classeurs')
+                },
                 oLanguage: {
                     sSearch: "Rechercher&nbsp;",
                     sInfo: "Classeurs _START_ &agrave; _END_ sur _TOTAL_",
@@ -64,6 +69,10 @@
                         sClass: "center"
                     },
                     {
+                        aTargets: [3],
+                        bSortable: false,
+                    },
+                    {
                         aTargets: [5],
                         sClass: "center",
                         "mRender": function ( data, type, full ) {
@@ -77,7 +86,7 @@
                         "mRender": function ( data, type, full ) {
                             var retour = '<a class="col-sm-6" href="' + Routing.generate('classeur_edit', {id: data}) + '"><span class="glyphicon glyphicon-pencil" title="Editer le document"></span></a>';
                             if (full[8] == 2) {
-                                retour += '<a class="col-sm-6"href="' + Routing.generate('visu', {id: full[7]}) + '"><span class="glyphicon glyphicon-eye-open" title="Voir le document"></span></a>';
+                                retour += '<a class="col-sm-6" href="' + Routing.generate('visu', {id: full[7]}) + '"><span class="glyphicon glyphicon-eye-open" title="Voir le document"></span></a>';
                             }
                             return retour;
                         }
